<resources>
    <string name="app_name">Kesouk</string>
    <string name="sign_in">Login</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobileno">Mobile Number</string>
    <string name="email">Email</string>
    <string name="retype_password">Retype Password</string>
    <string name="addaddress">ADD ADDRESS</string>
    <string name="signup">SIGN UP</string>
    <string name="applink"><![CDATA[Terms & Conditions]]></string>
    <string name="register">Register</string>
    <string name="mob">Mobile Number</string>
    <string name="nickname">Address Nickname eg.home/My...</string>
    <string name="city">City</string>
    <string name="house"><![CDATA[House No & Details]]></string>
    <string name="resident">Residential Complex (Optional)</string>
    <string name="area">Area</string>
    <string name="street">Street Name (Optional)</string>
    <string name="landmark">Landmarks (Optional)</string>
    <string name="default_addr">Make this my default address</string>
    <string name="save">SAVE</string>
    <string name="add_new_address">Add New Address</string>
    <string name="kenya_s_premium_online_supermarket">Kenya\'s Premium Online Supermarket</string>
    <string name="login">Login</string>
    <string name="skip">
         <u>Skip</u>
    </string>
    <string name="login_with">Login With</string>
    <string name="email_addr">E-Mail Address</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_passwd">Forget Password?</string>
    <string name="first_time_shopping">First Time Shopping  With Us?</string>
    <string name="otp_text">Please enter OTP received</string>
    <string name="otp">OTP</string>
    <string name="verify">VERIFY</string>
    <string name="resend_passwd">Resend OTP?</string>
    <string name="ingredients">Ingredients</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="search">Search</string>
    <string name="favorites">Favourites</string>
    <string name="basket">Basket</string>
    <string name="my_acc">My Account</string>
    <string name="my_orders">My Orders</string>
    <string name="my_wallet">My Wallet</string>
    <string name="faq">FAQs</string>
    <string name="contact">Contact Us</string>
    <string name="about">About Us</string>
    <string name="termscond"><![CDATA[Terms & Conditions]]></string>
    <string name="signin">Sign In</string>
    <string name="search_an_item">Search an Item ...</string>
    <string name="shop_by_category">SHOP BY CATEGORY</string>
    <string name="items">Items</string>
    <string name="no_items_wishlist">No items added in your Wishlist</string>
    <string name="explore_prod">EXPLORE ALL PRODUCTS</string>

</resources>
