<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_green"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/logo_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_20"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/splash_image"
                android:layout_width="@dimen/dimens_141"
                android:layout_height="@dimen/dimens_141"
                android:src="@drawable/logo" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_layout"
            android:layout_marginTop="@dimen/dimens_12"
            android:gravity="center_horizontal"
            android:text="@string/login_with"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/dimens_12sp"
            android:id="@+id/login_with_text"/>

        <LinearLayout
            android:id="@+id/social_login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_8"
            android:layout_marginRight="@dimen/dimens_8"
            android:layout_marginTop="@dimen/dimens_8"
            android:orientation="horizontal"
            android:layout_below="@+id/login_with_text"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_fb"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimens_45"
                android:textColor="@color/white"
                android:paddingTop="@dimen/dimens_10"
                android:drawableTop="@drawable/fb_icon"
                android:gravity="center"
                android:layout_marginRight="10dp"
                android:background="@drawable/facebook_background"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_google"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimens_45"
                android:textColor="@color/white"
                android:paddingTop="@dimen/dimens_10"
                android:drawableTop="@drawable/g_plus"
                android:gravity="center"
                android:background="@drawable/google_background"
                android:layout_weight="1"/>

        </LinearLayout>
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:padding="@dimen/activity_horizontal_margin"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/email_addr"
            android:layout_below="@+id/social_login_layout"
            android:drawableLeft="@drawable/username_icon"
            android:drawablePadding="@dimen/dimens_6"
            android:layout_marginLeft="@dimen/dimens_5"
            android:layout_marginRight="@dimen/dimens_5"
            android:background="@drawable/border_white"
            android:inputType="textEmailAddress"
            />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:padding="@dimen/activity_horizontal_margin"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/password"
            android:layout_below="@+id/et_email"
            android:drawableLeft="@drawable/password_icon"
            android:drawablePadding="@dimen/dimens_6"
            android:layout_marginLeft="@dimen/dimens_5"
            android:layout_marginRight="@dimen/dimens_5"
            android:layout_marginTop="@dimen/dimens_20"
            android:background="@drawable/border_white"
            android:inputType="textEmailAddress"
            />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_marginLeft="@dimen/dimens_10"
        android:layout_marginRight="@dimen/dimens_10"
        android:id="@+id/rem_forgot_layout"
        android:layout_marginTop="@dimen/dimens_20">

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox"
            android:buttonTint="@color/white" />

        <TextView
            android:id="@+id/tv_remeber_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/remember_me"
            android:textColor="@color/white"
            android:textSize="@dimen/dimens_11sp"
            android:layout_toRightOf="@+id/checkbox"
            android:layout_marginLeft="@dimen/dimens_10"
            android:layout_marginTop="@dimen/dimens_5" />


        <TextView
            android:id="@+id/tv_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgot_passwd"
            android:textColor="@color/white"
            android:textSize="@dimen/dimens_11sp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/dimens_5"/>

    </RelativeLayout>

        <Button
            android:id="@+id/btn_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimens_25"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/login"
            android:textSize="@dimen/dimens_15"
            android:textColor="@color/black"
            android:background="@drawable/round_button"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_below="@id/rem_forgot_layout" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@+id/btn_log"
            android:gravity="bottom">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_30"
                android:gravity="center_horizontal"
                android:text="@string/first_time_shopping"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/dimens_11sp"
                android:id="@+id/first_shopping"/>
            <Button
                android:id="@+id/btn_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimens_20"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:gravity="center_horizontal"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/register"
                android:textSize="@dimen/dimens_15sp"
                android:textColor="@color/black"
                android:background="@drawable/round_button"
                android:layout_marginLeft="@dimen/dimens_90"
                android:layout_marginRight="@dimen/dimens_90"
                android:layout_below="@id/first_shopping" />
        </RelativeLayout>


</RelativeLayout>


</ScrollView>